--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,18 +4,19 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "textprettify"
-version = "0.1.0"
+version = "0.2.0"
 authors = [
     {name = "Sajith", email = "mmssajith@gmail.com"}
 ]
-description = "A lightweight Python library for text cleaning and formatting"
+description = "A comprehensive Python library for text formatting, transformation, and analysis"
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Text Processing",
+    "Topic :: Text Processing :: Linguistic",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
@@ -24,10 +25,20 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
-keywords = ["text", "string", "formatting", "slug", "whitespace", "utility"]
+keywords = ["text", "string", "formatting", "slug", "whitespace", "utility", "analysis", "readability", "statistics", "case-conversion", "unicode", "normalization", "text-analysis"]
 license = {text = "MIT"}
 
 [project.urls]
 Homepage = "https://github.com/mmssajith/TextPrettify"
+Documentation = "https://github.com/mmssajith/TextPrettify#readme"
 "Bug Reports" = "https://github.com/mmssajith/TextPrettify/issues"
 "Source" = "https://github.com/mmssajith/TextPrettify"
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0.0",
+    "pytest-cov>=4.0.0",
+    "pre-commit>=3.0.0",
+    "ruff>=0.8.0",
+    "mypy>=1.0.0",
+]
